--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "ejs": "^2.4.2",
     "feedparser": "^1.1.4",
     "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.12.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0"
   }
 }
