--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,39 @@
 {
-  extends": "eslint:recommended",
+  "extends": "eslint:recommended",
+  "plugins": ["node"],
   "env": {
     "node" : true,
     "es6": true
   },
   "rules": {
-      "semi": "error",
-      "arrow-body-style": "error",
-      "arrow-parens": "error",
-      "arrow-spacing": "error",
-      "generator-star-spacing": "error",
-      "no-duplicate-imports": "error",
-      "no-restricted-imports": "error",
-      "no-useless-computed-key": "error",
-      "no-useless-constructor": "error",
-      "no-var": "error",
-      "object-shorthand": "error",
-      "prefer-const": "error",
-      "prefer-reflect": "error",
-      "prefer-rest-params": "error",
-      "prefer-spread": "error",
-      "prefer-template": "error",
-      "require-yield": "error",
-      "sort-imports": "error",
-      "template-curly-spacing": "error",
-      "yield-star-spacing": "error"
+    "semi": "error",
+    "arrow-body-style": "error",
+    "arrow-parens": "error",
+    "arrow-spacing": "error",
+    "generator-star-spacing": "error",
+    "no-duplicate-imports": "error",
+    "no-restricted-imports": "error",
+    "no-useless-computed-key": "error",
+    "no-useless-constructor": "error",
+    "no-var": "error",
+    "object-shorthand": "error",
+    "prefer-const": "error",
+    "prefer-reflect": "error",
+    "prefer-rest-params": "error",
+    "prefer-spread": "error",
+    "prefer-template": "error",
+    "require-yield": "error",
+    "sort-imports": "error",
+    "template-curly-spacing": "error",
+    "yield-star-spacing": "error",
+    "node/no-deprecated-api": "error",
+    "node/no-missing-import": "error",
+    "node/no-missing-require": "error",
+    "node/no-unpublished-import": "error",
+    "node/no-unpublished-require": "error",
+    "node/no-unsupported-features": ["error", {"version": 4}],
+    "node/process-exit-as-throw": "error",
+    "node/shebang": "error",
+    "no-console": "off"    
   }
 }
