--- a/.github/workflows/send_mail.yml
+++ b/.github/workflows/send_mail.yml
@@ -19,4 +19,4 @@ jobs:
         node-version: 12.x
     - run: yarn install
     - run: yarn build
-    - run: node dist/main.js --url {{secrets.FEED_URL}} --from {{secrets.FROM}} --to {{secrets.TO}} --host {{secrets.SMTP_HOST}} --user {{secrets.SMTP_USER}} --pass {{secrets.SMTP_PASSWORD}}
+    - run: node dist/main.js --url ${{secrets.FEED_URL}} --from ${{secrets.FROM}} --to ${{secrets.TO}} --host ${{secrets.SMTP_HOST}} --user ${{secrets.SMTP_USER}} --pass ${{secrets.SMTP_PASSWORD}}
